--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,12 +2,14 @@
   <tr>
     <th>Comprado</th>
     <th>Producto</th>
+    <th>Descuento</th>
   </tr>
   <tr *ngFor="let compra of compras; index as i;">
     <td>
-      <input type="radio" name="leido-{{i}}" [(ngModel)]="compra.leido" [value]=true> Si
-      <input type="radio" name="leido-{{i}}" [(ngModel)]="compra.leido" [value]=false> No
+      <input type="radio" name="comprar-{{i}}" [(ngModel)]="compra.comprado" [value]=true> Si
+      <input type="radio" name="comprar-{{i}}" [(ngModel)]="compra.comprado" [value]=false> No
     </td>
-    <td>{{compra.compra}}</td>
+    <td>{{compra.comprar}}</td>
+    <td>{{compra.descuento}}</td>
   </tr>
 </table>
