--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,25 @@
+
+<div class="loginDiv" *ngIf="( authComponent.user | async) as user; else login">{{user.email}} - {{user.uid}}
+  <br/><br/>
+  <button class="btn btn-secondary" (click)="authComponent.logout()">OUT</button>
+  <br/><br/>
+</div>
+
+
+<ng-template #login>
+  <div class="loginDiv">
+    <br/><br/>
+    <button class="btn btn-primary" (click)="authComponent.login()">
+      <i class="fab fa-github"></i>
+      Github Login</button>
+    <br/><br/>
+    <button class="btn btn-danger" (click)="authComponent.glogin()">
+      <i class="fab fa-google"></i>
+      Google Login
+    </button>
+  </div>
+</ng-template>
+
 <h1>Lista de la compra</h1>
 <table class="lista" style="width: 100%; border: 1px solid black;">
   <tr class="lista">
@@ -15,7 +37,7 @@
 <table class="estado" style="width: 100%; border: 1px solid black;">
   <tr class="estado">
     <th class="estado"> Comprado </th>
-    <th class="estado"> Por comprar </th>
+    <th class="estado"> Para comprar </th>
   </tr>
   <tr class="estado" *ngFor="let compra of compras; index as i">
   <td  *ngIf="compra.comprado" align="center">
