--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,6 +3,9 @@
   <br/><br/>
   <button class="btn btn-secondary" (click)="authComponent.logout()">OUT</button>
   <br/><br/>
+  <button class="btn btn-success" (click)="dbAPP.altausuario(user.email, user.uid)"><i class="fas fa-check"></i> ALTA</button>
+  <button class="btn btn-danger" (click)="dbAPP.bajausuario(user.uid)"><i class="far fa-trash-alt"></i> BAJA</button>
+  <br/><br/>
 </div>
 
 
